2012-11-28  Dan Carney  <dcarney@google.com>

        [V8] Crash wrapping media element when MediaPlayer isn't available
        https://bugs.webkit.org/show_bug.cgi?id=103431

        Reviewed by Kentaro Hara.

        Call HTMLElement::createWrapper directly when dispatching a
        disabled MediaElement wrap.

        No new tests. Testing this must apparently be manual.

        * bindings/scripts/CodeGeneratorV8.pm:
        (GenerateHeader):
        * dom/make_names.pl:
        (printWrapperFunctions):
        (printWrapperFactoryHeaderFile):

2012-11-28  Roger Fong  <roger_fong@apple.com>

        Initialize identity matrix in SimpleFontData::initGDIFont() properly.
        https://bugs.webkit.org/show_bug.cgi?id=103499
        <rdar://problem/12400700>

        Reviewed by Timothy Horton.

        We are incorrectly initializing the matrix passed into GetGlyphOutline.
        This patch fixes MAT2 initialization to match the way we initialize the 
        identity matrix in SimpleFontData::boundsForGDIGlyph and SimpleFontData::widthForGDIGlyph.

        * platform/graphics/win/SimpleFontDataWin.cpp:
        (WebCore::SimpleFontData::initGDIFont):

2012-11-28  Huang Dongsung  <luxtella@company100.net>

        [Texmap] REGRESSION(r135620) QtTestBrowser crashes on Google-gravity.
        https://bugs.webkit.org/show_bug.cgi?id=103410

        Reviewed by Noam Rosenthal.

        GraphicsLayerTextureMapper::updateBackingStore() should return early
        before TextureMapper is set.

        GraphicsLayer::FlushCompositingState() can be called by RenderLayerBacking. It
        means this method can be called before creating TextureMapper. So
        TextureMapperLayer::flushCompositingState() checks and returns early if
        TextureMapper was not created.

        However, GraphicsLayerTextureMapper::updateBackingStore() expects that TextureMapper
        always exists. updateBackingStore should also return early when TextureMapper